--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,11 +5,13 @@ html lang="en"
         meta name="viewport" content="width=device-width, initial-scale=1.0"/
         meta http-equiv="X-UA-Compatible" content="ie=edge"/
         title Köp och Sälj
+        link rel="stylesheet" href="/css/css.css"/
     body
 
-    nav
-        a href="menu" img src="" alt=""/
-        a href="home" img src="" alt=""/
-        a href="publish"
-        a href="/user/login" Logga in
+        nav
+            a href="menu" 
+                img src="/img/menu.svg" alt=""/
+            a href="home" id="logo"  Namn på Företaget
+            a href="publish" Lägg upp
+            a href="/user/login" Logga in
     ==yield
