--- a/public/css/css.css
+++ b/public/css/css.css
@@ -5,8 +5,8 @@ body {
 }
 
 body nav {
-  background-color: #EEEEEE;
-  height: 10vh;
+  background-color: #FFFFFF;
+  height: 8vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
