--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,7 +11,25 @@ html lang="en"
         nav
             a href="menu" 
                 img src="/img/menu.svg" alt=""/
-            a href="home" id="logo"  Namn på Företaget
-            a href="publish" Lägg upp
+            a href="/" id="logo"  Namn på Företaget
+            a href="/publish" Lägg upp
             a href="/user/login" Logga in 
+
+            
+        footer
+            div
+                nav 
+                    div 
+                        h3 lista 1 om viktiga saker 
+                        ul
+                            li 
+                            li
+                            li
+                    div 
+                        h3 lista 2 om viktiga saker 
+                        ul
+                            li 
+                            li
+                            li
+            div 
     ==yield
