--- a/views/publish.slim
+++ b/views/publish.slim
@@ -1,5 +1,12 @@
-
-main 
-    form action="" 
-     
+main class="Publish_wrapper"
+    div class="Publish_container"
+        form action="/publish" method="post" class="Publish_form"
+            input type="text" name="Name" placeholder=""
+            input type="text" name="Epost" placeholder=""
+            input type="text" name="Adress" placeholder=""
+            input type="text" name="Adress_repeat" placeholder=""
+            input type="text" name="Phone_number" placeholder=""
+            input type="text" name="Post_number" placeholder=""
+            input type="text" name="Location" placeholder=""
+            input type="submit" value="Lägg upp"
     
