--- a/views/start.slim
+++ b/views/start.slim
@@ -1,8 +1,8 @@
-div class="Start_search_box"
+div class="Start_wrapper"
     div class="Start_search_flex"
         input type="text" placeholder="Vad letar du efter?" class="Start_search_box" 
         div class="Start_icon_categories"
-            img src="" alt=""/
+            img src="../misc/icon.png" alt="" class="Start_icon_1" /
             img src="" alt=""/
             img src="" alt=""/
         p Kategorier
