--- a/views/user/login.slim
+++ b/views/user/login.slim
@@ -2,8 +2,14 @@
 
 div
     h1 Skapa konto 
-    form action="/user/login" method="post"
-        input type="text" name="mail" placeholder="Email"
+    form action="/user/register" method="post"
+        input type="text" name="mail" placeholder="Mail"
         input type="text" name="password" placeholder="Lösenord"
         input type="text" name="password_confirm" placeholder="Lösenord igen"
-        input type="submit" value="Skapa"
+        input type="submit" value="Registrera"
+
+    h1 Logga in
+    form action="/user/login" method="post"
+        input type="text" name="mail" placeholder="Mail"
+        input type="text" name="password" placeholder="Lösenord"
+        input type="submit" value="Logga in"
