--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,6 +6,7 @@ html lang="en"
         meta http-equiv="X-UA-Compatible" content="ie=edge"/
         title Köp och Sälj
         link rel="stylesheet" href="/css/css.css"/
+        <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css" integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd" crossorigin="anonymous">
     body
 
         nav
