--- a/views/user/login.slim
+++ b/views/user/login.slim
@@ -5,7 +5,7 @@ div
     form action="/user/register" method="post"
         input type="text" name="mail" placeholder="Mail"
         input type="text" name="password" placeholder="Lösenord"
-        input type="text" name="password_confirm" placeholder="Lösenord igen"
+        input type="text" name="password_confirmation" placeholder="Lösenord igen"
         input type="submit" value="Registrera"
 
     h1 Logga in
