--- a/views/user/login.slim
+++ b/views/user/login.slim
@@ -4,12 +4,12 @@ div
     h1 Skapa konto 
     form action="/user/register" method="post"
         input type="text" name="mail" placeholder="Mail"
-        input type="text" name="password" placeholder="Lösenord"
-        input type="text" name="password_confirmation" placeholder="Lösenord igen"
+        input type="password" name="password" placeholder="Lösenord"
+        input type="password" name="password_confirmation" placeholder="Lösenord igen"
         input type="submit" value="Registrera"
 
     h1 Logga in
     form action="/user/login" method="post"
         input type="text" name="mail" placeholder="Mail"
-        input type="text" name="password" placeholder="Lösenord"
+        input type="password" name="password" placeholder="Lösenord"
         input type="submit" value="Logga in"
