--- a/views/user/profile.slim
+++ b/views/user/profile.slim
@@ -20,3 +20,5 @@ form action="/profile/edit" method="post" class="Profile_form"
                     label for="adress" class="bold" Adress
                     input type="text" id="adress" name="adress" placeholder=""
                     input type="submit" value="Uppdatera"
+
+a href="/logout" Log out 
