--- a/public/css/css.scss
+++ b/public/css/css.scss
@@ -4,6 +4,7 @@
 body {
     margin: 0;
     height: 200vh;
+    color: white;
     
     nav{
         background-color: $darkGrey;
@@ -15,7 +16,8 @@ body {
         }
 
         a{
-            color: black;
+            color: white;
+            color: white;
             text-decoration: none;
             font-family: 'Lato', sans-serif;
 
