--- a/views/start.slim
+++ b/views/start.slim
@@ -20,6 +20,7 @@ div class="Start_wrapper"
                             p class="content_adress_date" #{article["adress"]} #{article["date_created"]}
                             a class="content_title" href="articles/#{article['article_id']}"  #{article["title"]} 
                             p class="content_text" #{article["content"]}
+                            p  #{article["tag_name"]}
                             p class="content_price" #{article["price"]} sek
 
 
