--- a/views/articles/content.slim
+++ b/views/articles/content.slim
@@ -1,14 +1,16 @@
 
-
-p Lades upp: #{all_data["date_created"]}
-p Adress: #{all_data["adress"]}
-h1 #{all_data["title"]} 
-p #{all_data["price"]} sek
-p #{all_data["content"]}
-p Användare: #{all_data["user_id"]}
-p Telefon: #{all_data["phone_number"]}
+div class="content_wrapper"
+    p Lades upp: #{all_data["date_created"]}
+    p Adress: #{all_data["adress"]}
+    h1 #{all_data["title"]} 
+    p #{all_data["price"]} sek
+    p #{all_data["content"]}
+    p Användare: #{all_data["user_id"]}
+    p Telefon: #{all_data["phone_number"]}
 
 - if all_data['user_id'] == session[:user_id]
     nav class="content_"
         a href="#{all_data['article_id']}/edit" Redigera
-        a href="#{all_data['article_id']}/delete" Ta bort
+        / a href="#{all_data['article_id']}/delete" Ta bort
+        form action="#{all_data['article_id']}/delete" method="post"
+            input type="submit" value="Delete"
