--- a/public/css/css.scss
+++ b/public/css/css.scss
@@ -4,7 +4,7 @@
 body {
     margin: 0;
     height: 200vh;
-    color: white;
+    color: black;
     
     nav{
         background-color: $darkGrey;
@@ -16,8 +16,8 @@ body {
         }
 
         a{
-            color: white;
-            color: white;
+            color: black;
+            color: black;
             text-decoration: none;
             font-family: 'Lato', sans-serif;
 
@@ -78,6 +78,11 @@ body {
 
             }
         }
+    }
+
+    div.content_wrapper{
+        color: black;
+        background-color: rebeccapurple;
     }
 
     footer{
