--- a/views/layout.slim
+++ b/views/layout.slim
@@ -15,8 +15,8 @@ html lang="en"
                 a href="menu" 
                     img src="/img/menu.svg" alt=""/
                 a href="/" id="logo"  Namn på Företaget
-                a href="/publish" Lägg upp
-                a href="/admin" Admin sida
+                a href="/articles/publish" Lägg upp
+                a href="/user/admin" Admin sida
                 a href="/user/profile/#{session[:user_id]}" #{session[:mail]}
                 / below does not work properly, doesnt show the link to admins 
         - elsif session[:user_id] != nil 
@@ -24,7 +24,7 @@ html lang="en"
                 a href="menu" 
                     img src="/img/menu.svg" alt=""/
                 a href="/" id="logo"  Namn på Företaget
-                a href="/publish" Lägg upp
+                a href="/articles/publish" Lägg upp
                 a href="/user/profile/#{session[:user_id]}" #{session[:mail]}
         - else
             nav 
